This is my second commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="d4">4</div>
         <div class="d5">5</div>
         <h1 class="h1" >Naresh Poonia</h1>
-        <h2 class="h2">Aspiring Developer</h2>
+        <h2 class="h2">Aspiring Developer & </h2>
         <h2 class="h2">Javascript, CSS, HTML </h2>
     </div>
     
