The CSS has been removed and HTML has been updated

--- a/index.html
+++ b/index.html
@@ -9,14 +9,30 @@
 </head>
 <body>
     <div class="container">
-        <div class="d1"><h3 class="h3">HOME</h3></div>
-        <div class="d2">2</div>
-        <div class="d3">3</div>
-        <div class="d4">4</div>
-        <div class="d5">5</div>
+        <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Contact</li>
+    </ul>
         <h1 class="h1" >Naresh Poonia</h1>
         <h2 class="h2">Aspiring Developer & </h2>
         <h2 class="h2">Javascript, CSS, HTML </h2>
+        <a target="_blank" href="https://twitter.com/naresh_poonia_">Twitter</a>
+        <a target="_blank" href="https://github.com/nareshpoonia">github</a>
+        <a target="_blank" href="mailto:dim0627@gmail.com">Mail</a>
+        <a target="_blank" href="https://dev.to/naresh">Dev.to</a>
+        <h1 class="h1" >About</h1>
+        <ul>
+            <li> I am working on changing my career and moving into tech at 30</li>
+            <li> I am currently Employed as a Cost Controller in a Construction Company in India</li>
+        </ul>
+        <h1 class="h1" >Projects</h1>
+        <ul>
+            <li><a target="_blank" href="https://github.com/nareshpoonia/nareshpoonia.github.io">Nareshpoonia.com</a><br/> My Portfolio Website </li>
+        </ul>
+
+        <h3>(c) Naresh Poonia</h3>
     </div>
     
 </body>
