Changed a word for new commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="h1" >About</h1>
         <ul>
             <li> I am working on changing my career and moving into tech at 30</li>
-            <li> I am currently Employed as a Cost Controller in a Construction Company in India</li>
+            <li> I am currently Employed as a Cost-Controller in a Construction Company in India</li>
         </ul>
         <h1 class="h1" >Projects</h1>
         <ul>
