Website link & github repository link updated

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <h3 class="h3">nareshpoonia.com</h3>
                 <p class="h4"><br>It is my Portfolio website, you are currently on the same website</p>
                 <p id="h3"><br>html, css</p>
-                <a class="maildiv" target="_blank" href="www.nareshpoonia.com"><ion-icon name="link-outline"></ion-icon></ion-icon></a>
+                <a class="maildiv" target="_blank" href="https://nareshpoonia.com"><ion-icon name="link-outline"></ion-icon></ion-icon></a>
+                <a class="gitdiv" target="_blank" href="https://github.com/nareshpoonia/nareshpoonia"><ion-icon name="logo-github"></ion-icon></a>
                 
             </div>
             <div class="box-2">
