--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 id="contact"></h2>
         <a class="socialdiv" target="_blank" href="https://twitter.com/naresh_poonia_"><ion-icon name="logo-twitter"></ion-icon></a>
         <a class="gitdiv" target="_blank" href="https://github.com/nareshpoonia"><ion-icon name="logo-github"></ion-icon></a>
-        <a class="maildiv" target="_blank" href="mailto:dim0627@gmail.com"><ion-icon name="mail-outline"></ion-icon></a>
+        <a class="maildiv" target="_blank" href="mailto:nareshpoonia7@gmail.com"><ion-icon name="mail-outline"></ion-icon></a>
         
         <a class="devdiv" target="_blank" href="https://dev.to/naresh"><i class="fab fa-dev"></i></a>
         <h1 class="charlie" id="About" >About</h1>
