navigation and hero section

--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <link rel="stylesheet" href="style.css">
   <body>
     <header>
       <nav>
-        <h1>Naresh Poonia</h1>
+        <a class="logo-text" href="">Naresh Poonia</a>
         <div>
           <ul>
-            <li>Home</li>
-            <li>Portfolio</li>
-            <li>About</li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">About</a></li>
           </ul>
         </div>
       </nav>
     </header>
-    <section class="top-section">
-      <h2>Aspiring Front-End Developer</h2>
-      <h3>
-        Hi I'm Naresh, an aspiring front end Developer with a couple of certifications
+    <section class="hero-section">
+      <h2 class="hero-heading">Aspiring Front-End Developer</h2>
+      <h3 class="bio">
+        Hi. I'm Naresh, an aspiring front end Developer with a couple of  
+          <br> certifications and bunch of Projects in Html, CSS, Javascript & React
       </h3>
     </section>
     <section class="mid-section">
-      <img src="" alt="" />
+      <img class="hero-image" src="/images/blogging.svg" alt="hero-image" />
       <h4>Front End Development</h4>
       <h5>
         Responsive website build for an optimal user experience that achieve the
